cluster/deploy-performance-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:    
    tier: performance
  name: owlvey-performance-node-deployment
  namespace: owlvey
spec:
  replicas: 2
  selector:
    matchLabels:
      key: owlvey-performance-node-pod
  template:
    metadata:
      labels:
        key: owlvey-performance-node-pod
    spec:      
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: owlvey-performance-node
          image: localhost:48700/registry/performance:latest
          imagePullPolicy: Always
