cluster/deploy-performance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:    
    tier: performance
  name: owlvey-performance-deployment
  namespace: owlvey
spec:
  replicas: 1
  selector:
    matchLabels:
      key: owlvey-performance-pod
  template:
    metadata:
      labels:
        key: owlvey-performance-pod
    spec:
      containers:
        - name: owlvey-performance
          image: owlveydevcommit/performance:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8089
              name: web
            - containerPort: 5557
              name: cluster
---
apiVersion: v1
kind: Service
metadata:
  name: service-performance
  namespace: owlvey
spec:  
  type: ClusterIP
  selector:
    key: owlvey-performance-pod
  ports:
    - name: performance
      protocol: TCP      
      port: 48100
      targetPort: 8089
    - name: grid
      protocol: TCP      
      port: 5557
      targetPort: 5557

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:    
    tier: performance
  name: owlvey-performance-node-deployment
  namespace: owlvey
spec:
  replicas: 1
  selector:
    matchLabels:
      key: owlvey-performance-node-pod
  template:
    metadata:
      labels:
        key: owlvey-performance-node-pod
    spec:
      containers:
        - name: owlvey-performance-node
          image: owlveydevcommit/performance:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8089
