cluster/service-performance.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-performance
  namespace: owlvey
spec:  
  type: ClusterIP
  selector:
    key: owlvey-performance-pod
  ports:
    - name: performance
      protocol: TCP      
      port: 48100
      targetPort: 8089
