cluster/route-performance.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: owlvey-ingress-performance
  namespace: owlvey
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`performance.owlvey.com`) 
    kind: Rule
    services:
    - name: service-performance
      port: 48100
